# TinyTensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_data.py
include/: tensor.h
src/: demo.cpp  tensor.cpp
tests/: integration_test.cpp  test_tensor.cpp
